[tool.poetry]
name = "data-science"
version = "0.1.0"
description = "These are required python packages for courses."
authors = ["Juan Manuel Serrano Rodriguez <jumserranor@udistrital.edu.co>"]
license = "GNU/GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
fastapi = "^0.110.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.28"
python-dotenv = "^1.0.1"
uvicorn = "^0.29.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.2"
pydantic = "^2.7.1"
ipykernel = "^6.29.5"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
dill = "^0.3.8"
black = "^24.4.2"
pylint = "^3.1.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
